@@ -13,26 +13,6 @@ type File struct {
 	State    *State
 }
 
-// Check that the file isn't a symlink, mode is regular or file is nil
-func (f *File) IsRegular() bool {
-	if f.File == nil {
-		logp.Critical("Harvester: BUG: f arg is nil")
-		return false
-	}
-
-	info, e := f.File.Stat()
-	if e != nil {
-		logp.Err("File check fault: stat error: %s", e.Error())
-		return false
-	}
-
-	if !info.Mode().IsRegular() {
-		logp.Warn("Harvester: not a regular file: %q %s", info.Mode(), info.Name())
-		return false
-	}
-	return true
-}
-
 // Checks if the two files are the same.
 func (f *File) IsSameFile(f2 *File) bool {
 	return os.SameFile(f.FileInfo, f2.FileInfo)
@@ -48,9 +28,4 @@ func IsSameFile(path string, info os.FileInfo) bool {
 	}
 
 	return os.SameFile(fileInfo, info)
-}
-
-func IsRegular(file *os.File) bool {
-	f := &File{File: file}
-	return f.IsRegular()
 }
