@@ -484,3 +484,274 @@ class Test(BaseTest):
             assert output[0]["message"] == message
 
             filebeat.kill_and_wait()
+
+    def test_ignore_symlink(self):
+        """
+        Test that symlinks are ignored
+        """
+        self.render_config_template(
+            path=os.path.abspath(self.working_dir) + "/log/symlink.log",
+        )
+
+        os.mkdir(self.working_dir + "/log/")
+
+        logfile = self.working_dir + "/log/test.log"
+        symlink = self.working_dir + "/log/symlink.log"
+
+        if os.name == "nt":
+            import win32file
+            win32file.CreateSymbolicLink(symlink, logfile, 0)
+        else:
+            os.symlink(logfile, symlink)
+
+        with open(logfile, 'a') as file:
+            file.write("Hello World\n")
+
+        filebeat = self.start_beat()
+
+        # Make sure symlink is skipped
+        self.wait_until(
+            lambda: self.log_contains(
+                "skipped as it is a symlink"),
+            max_timeout=15)
+
+        filebeat.check_kill_and_wait()
+
+
+    def test_symlinks_enabled(self):
+        """
+        Test if symlinks are harvested
+        """
+        self.render_config_template(
+            path=os.path.abspath(self.working_dir) + "/log/symlink.log",
+            symlinks="true",
+        )
+
+        os.mkdir(self.working_dir + "/log/")
+
+        logfile = self.working_dir + "/log/test.log"
+        symlink = self.working_dir + "/log/symlink.log"
+
+        if os.name == "nt":
+            import win32file
+            win32file.CreateSymbolicLink(symlink, logfile, 0)
+        else:
+            os.symlink(logfile, symlink)
+
+        with open(logfile, 'a') as file:
+            file.write("Hello World\n")
+
+        filebeat = self.start_beat()
+
+        # Make sure content in symlink file is read
+        self.wait_until(
+            lambda: self.output_has(lines=1),
+            max_timeout=10)
+
+        filebeat.check_kill_and_wait()
+
+
+    def test_symlink_rotated(self):
+        """
+        Test what happens if symlink removed and points to a new file
+        """
+        self.render_config_template(
+            path=os.path.abspath(self.working_dir) + "/log/symlink.log",
+            symlinks="true",
+        )
+
+        os.mkdir(self.working_dir + "/log/")
+
+        logfile1 = self.working_dir + "/log/test1.log"
+        logfile2 = self.working_dir + "/log/test2.log"
+        symlink = self.working_dir + "/log/symlink.log"
+
+        if os.name == "nt":
+            import win32file
+            win32file.CreateSymbolicLink(symlink, logfile1, 0)
+        else:
+            os.symlink(logfile1, symlink)
+
+        with open(logfile1, 'a') as file:
+            file.write("Hello World1\n")
+
+        with open(logfile2, 'a') as file:
+            file.write("Hello World2\n")
+
+        filebeat = self.start_beat()
+
+
+        # Make sure symlink is skipped
+        self.wait_until(
+            lambda: self.output_has(lines=1),
+            max_timeout=10)
+
+        os.remove(symlink)
+
+        if os.name == "nt":
+            import win32file
+            win32file.CreateSymbolicLink(symlink, logfile2, 0)
+        else:
+            os.symlink(logfile2, symlink)
+
+        with open(logfile1, 'a') as file:
+            file.write("Hello World3\n")
+            file.write("Hello World4\n")
+
+        # Make sure new file and addition to old file were read
+        self.wait_until(
+            lambda: self.output_has(lines=4),
+            max_timeout=10)
+
+        filebeat.check_kill_and_wait()
+
+        # Check if two different files are in registry
+        data = self.get_registry()
+        assert len(data) == 2
+
+
+    def test_symlink_removed(self):
+        """
+        Tests that if a symlink to a file is removed, no further data is read which is added to the original file
+        """
+        self.render_config_template(
+            path=os.path.abspath(self.working_dir) + "/log/symlink.log",
+            symlinks="true",
+        )
+
+        os.mkdir(self.working_dir + "/log/")
+
+        logfile = self.working_dir + "/log/test.log"
+        symlink = self.working_dir + "/log/symlink.log"
+
+        if os.name == "nt":
+            import win32file
+            win32file.CreateSymbolicLink(symlink, logfile, 0)
+        else:
+            os.symlink(logfile, symlink)
+
+        with open(logfile, 'a') as file:
+            file.write("Hello World1\n")
+
+        filebeat = self.start_beat()
+
+        # Make sure symlink is skipped
+        self.wait_until(
+            lambda: self.output_has(lines=1),
+            max_timeout=10)
+
+        os.remove(symlink)
+
+        with open(logfile, 'a') as file:
+            file.write("Hello World2n")
+
+        # Sleep 1s to make sure new events are not picked up
+        time.sleep(1)
+
+        # Make sure also new file was read
+        self.wait_until(
+            lambda: self.output_has(lines=1),
+            max_timeout=10)
+
+        filebeat.check_kill_and_wait()
+
+        # Check if two different files are in registry
+        data = self.get_registry()
+        assert len(data) == 1
+
+    def test_symlink_and_file(self):
+        """
+        Tests that if symlink and original file are read, that only events from one are added
+        """
+        self.render_config_template(
+            path=os.path.abspath(self.working_dir) + "/log/*",
+            symlinks="true",
+        )
+
+        os.mkdir(self.working_dir + "/log/")
+
+        logfile = self.working_dir + "/log/test.log"
+        symlink = self.working_dir + "/log/symlink.log"
+
+        if os.name == "nt":
+            import win32file
+            win32file.CreateSymbolicLink(symlink, logfile, 0)
+        else:
+            os.symlink(logfile, symlink)
+
+        with open(logfile, 'a') as file:
+            file.write("Hello World1\n")
+
+        filebeat = self.start_beat()
+
+        # Make sure both files were read
+        self.wait_until(
+            lambda: self.output_has(lines=1),
+            max_timeout=10)
+
+        filebeat.check_kill_and_wait()
+
+        # Check if two different files are in registry
+        data = self.get_registry()
+        assert len(data) == 1
+
+    def test_truncate(self):
+        """
+        Tests what happens if file is truncated and symlink recreated
+        """
+        self.render_config_template(
+            path=os.path.abspath(self.working_dir) + "/log/*",
+            symlinks="true",
+        )
+
+        os.mkdir(self.working_dir + "/log/")
+
+        logfile = self.working_dir + "/log/test.log"
+        symlink = self.working_dir + "/log/symlink.log"
+
+        if os.name == "nt":
+            import win32file
+            win32file.CreateSymbolicLink(symlink, logfile, 0)
+        else:
+            os.symlink(logfile, symlink)
+
+        with open(logfile, 'w') as file:
+            file.write("Hello World1\n")
+            file.write("Hello World2\n")
+            file.write("Hello World3\n")
+            file.write("Hello World4\n")
+
+        filebeat = self.start_beat()
+
+        # Make sure both files were read
+        self.wait_until(
+            lambda: self.output_has(lines=4),
+            max_timeout=10)
+
+        os.remove(symlink)
+        with open(logfile, 'w') as file:
+            file.truncate()
+            file.seek(0)
+
+        if os.name == "nt":
+            import win32file
+            win32file.CreateSymbolicLink(symlink, logfile, 0)
+        else:
+            os.symlink(logfile, symlink)
+
+        # Write new file with content shorter then old one
+        with open(logfile, 'a') as file:
+            file.write("Hello World5\n")
+            file.write("Hello World6\n")
+            file.write("Hello World7\n")
+
+        # Make sure both files were read
+        self.wait_until(
+            lambda: self.output_has(lines=7),
+            max_timeout=10)
+
+        filebeat.check_kill_and_wait()
+
+        # Check that only 1 registry entry as original was only truncated
+        data = self.get_registry()
+        assert len(data) == 1
